# Tradeclaw

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MEMORY_README.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  run.sh  run_report.sh
config/: holdings.yaml.example
docs/: ARCHITECTURE_DIAGRAM_PROMPT.md  KLINE_CACHE_GUIDE.md  MEMORY_GUIDE.md  OPTIMIZATION_SUMMARY.md
examples/: hybrid_retrieval_demo.py  memory_demo.py
memory/: episodes.json  policies.json  reflections.pkl
memory/test/: episodes.json  policies.json  reflections.pkl
reports/: example_daily_report.md
src/tradeclaw/: crew.py  main.py  post_processor.py
src/tradeclaw/config/: agents.yaml  tasks.yaml
src/tradeclaw/data/: akshare_data.py  eastmoney_api.py  fetch_data.py  holdings.py  hybrid_data.py  kline_cache.py  realtime_data.py  tencent_api.py
src/tradeclaw/memory/: __init__.py  analysis_history.py  core.py  integration.py  optimizer.py
src/tradeclaw/tools/: fetch_data.py  hot_news_tool.py  hot_news_tool_akshare.py  market_data_tool.py  market_hot_news.py  market_indices_tool.py  market_indices_tool_v2.py  stock_price_tool.py
tests/: test_memory.py
