[project]
name = "tradeclaw"
version = "0.1.0"
description = "tradeclaw using crewAI"
authors = [{ name = "Ming", email = "mingji3503@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.scripts]
tradeclaw = "tradeclaw.main:run"
run_crew = "tradeclaw.main:run"
train = "tradeclaw.main:train"
replay = "tradeclaw.main:replay"
test = "tradeclaw.main:test"
run_with_trigger = "tradeclaw.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
